--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -26,6 +26,10 @@ body
   justify-content: space-between
   @include mixins.container
 
+  @include mixins.mobile
+    padding: 1.1rem
+
+
   &-brand //.header-brand
     color: variables.$primary-color
     font-size: 3rem
@@ -34,6 +38,9 @@ body
     ul
       height:100%
       @include mixins.flex-center
+
+      @include mixins.mobile
+      display: none
 
       li
         margin: 0 1rem
@@ -52,6 +59,9 @@ body
       height:100%
       @include mixins.flex-center
 
+      @include mixins.mobile
+        display: none
+
       li
         margin: 0 1rem
 
@@ -67,6 +77,11 @@ body
   justify-content: space-between
   padding: 0
 
+  @include mixins.mobile
+    flex-direction: column
+
+  
+
   &-card //gallery-card
     width: 31%
     height: 400px
@@ -74,6 +89,11 @@ body
     @include mixins.flex-center 
     flex-direction: column
     color: variables.$primary-color
+
+    @include mixins.mobile
+      width: 90%
+      margin-bottom: 6%
+    
 
 
  
