--- a/sass/styles.sass
+++ b/sass/styles.sass
@@ -45,7 +45,7 @@ body
       li
         margin: 0 1rem
         text-transform: uppercase
-        font-size:.8rem
+        font-size: .8rem
 
         .active 
           color: variables.$secondary-color
@@ -66,8 +66,11 @@ body
         margin: 0 1rem
 
         a
+          font-size: 1.4rem
+
           &:hover
             color: variables.$primary-color
+            
 
     
 .gallery
